--- a/QuestManager.Data/QuestManager.Data.csproj
+++ b/QuestManager.Data/QuestManager.Data.csproj
@@ -75,6 +75,12 @@
       <DependentUpon>201309050315089_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QuestManager.Serialization\QuestManager.Serialization.csproj">
+      <Project>{e6828b0b-4d3d-4520-8fa8-923a1b1e3db5}</Project>
+      <Name>QuestManager.Serialization</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
