--- a/QuestManager.Serialization/QuestManager.Serialization.csproj
+++ b/QuestManager.Serialization/QuestManager.Serialization.csproj
@@ -41,6 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestArrayAttributeAccessor.cs" />
+    <Compile Include="QuestArrayKeyAttribute.cs" />
+    <Compile Include="QuestArrayValueAttribute.cs" />
+    <Compile Include="QuestKeyedArrayAttribute.cs" />
     <Compile Include="QuestAttributeAccessor.cs" />
     <Compile Include="QuestAttributes.cs" />
     <Compile Include="QuestElementAttributeAccessor.cs" />
